<resources>
    <string name="app_name">msg</string>
    <string name="username_email_or_phone_number">Username, email or phone number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="something_went_wrong">Oops. Something went wrong. Please try again later.</string>
    <string name="username_taken">This username has already been taken.</string>
    <string name="email_taken">This email has already been taken.</string>
    <string name="username_min_length">Username should have at least 3 characters.</string>
    <string name="username_cannot_be_blank">Username cannot be blank.</string>
    <string name="email_cannot_be_blank">Email cannot be blank.</string>
    <string name="name_cannot_be_blank">Name cannot be blank.</string>
    <string name="password_cannot_be_blank">Password cannot be blank.</string>
    <string name="password_min_length">Password should have at least 8 characters.</string>
    <string name="prefs_current_user">io.msgapp.android.prefs.CURRENT_USER</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="action_settings">Settings</string>
    <string name="text_message_spaces_at_end">                     </string>
</resources>
